--- a/src/resource/views/admin/showProducts.hbs
+++ b/src/resource/views/admin/showProducts.hbs
@@ -1,35 +1,111 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Product Information</title>
-</head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+ 
+        .backspace {
+            margin-bottom: 20px;
+        }
+        .product-list {
+            float: left;
+            width: 100%; /* Điều chỉnh kích thước theo ý muốn */
 
+            margin-right: 20px; /* Khoảng cách giữa danh sách sản phẩm và bảng */
+            
+        }
+
+        .table-container {
+            width: auto; /* Điều chỉnh kích thước theo ý muốn */
+            margin-left: 100px;
+            margin-right: 100px;
+        }
+        .card-img-top {
+            width: 150px;
+            height: 150px;
+        }
+        .th{
+            padding: 8px;
+            text-align: center;
+        }
+
+        .btn-add {
+            float: right;
+        }
+        .btn_container {
+            text-align: right; /* Đặt nội dung trong div sang phải */
+            padding-right: 100px; /* Khoảng cách từ lề phải */
+        }
+
+
+
+  </style>
+</head>
 <body>
-    <h1>Product Information</h1>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Type</th>
-                <th>Image</th>
-                <th>Price</th>
-                <th>Slug</th>
-            </tr>
+    <div class="backspace product-list mt-4 ml-4">
+        <a style="color: rgb(100, 97, 97);" href="/"> Trang chủ </a>
+        <span>&gt;</span>
+        <a style="color: rgb(100, 97, 97);" href="/"> Quản lí sản phẩm </a>
+    </div>
+
+    <div class="btn_container"> 
+        <button class="btn btn-add">
+            <a href="/products/addProduct">
+                <i class="fa-sharp fa-solid fa-plus"></i>
+                New Product
+            </a>
+        </button>
+    </div>
+
+    <div class="table-container">
+        <div >
+    {{!-- <h2>Table Head Colors</h2> --}}
+    {{!-- <p>The .thead-dark class adds a black background to table headers, and the .thead-light class adds a grey background to table headers:</p> --}}
+    <table class="table">
+        <thead class="thead-dark">
+        <tr>
+            <th >Name</th>
+            <th >Type</th>
+            <th >Image</th>
+            <th >Price</th>
+            <th >Slug</th>
+            <th >Action</th>
+
+        </tr>
         </thead>
         <tbody>
-            {{#each products}}
+        {{#each products}}
             <tr>
                 <td>{{this.name}}</td>
                 <td>{{this.type}}</td>
-                <td><img
-                  class="card-img-top"
-                  src="{{this.image}}"
-                  alt="{{this.name}}"
-                /></td>
+                <td>
+                    <div class="product-image">
+                        <img
+                            class="card-img-top"
+                            src="{{this.image}}"
+                            alt="{{this.name}}"
+                        />
+                    </div>
+                </td>
                 <td>{{this.price}}</td>
                 <td>{{this.slug}}</td>
+                <td>
+                    <button class="btn"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="btn"><i class="fa fa-trash"></i></button>
+                </td>
             </tr>
             {{/each}}
         </tbody>
     </table>
+    
+    
+    </div>
+    </div>
+    
 </body>
-
 </html>
