--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -56,7 +56,7 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #bebebe;
+  background-color: #F9CC76;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px; }
