--- a/src/resource/views/admin/homepageAdmin.hbs
+++ b/src/resource/views/admin/homepageAdmin.hbs
@@ -4,15 +4,15 @@
   <div id="mySidenav" class="sidenav">
     <a
       href="javascript:void(0)"
-      class="closebtn"
+      class="closebtn"s
       onclick="closeNav()"
     >&times;</a>
     <a href="#">Trang chủ</a>
     <a href="#">Lịch sử góp ý</a>
     <a href="#">Quản lý order</a>
     <a href="#">Quản lý doanh thu</a>
-    <a href="#">Quản lý nhân viên</a>
-    <a href="#">Quản lý sản phẩm</a>
+    <a href="/admin/showEmployees">Quản lý nhân viên</a>
+    <a href="/admin/showProducts">Quản lý sản phẩm</a>
     <a href="#">Đăng xuất</a>
   </div>
   <div>
