--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -10,7 +10,7 @@
     {{#if user}}
     <a href="#">Trang chủ</a>
     <a href="#">Lịch sử góp ý</a>
-    <a href="#">Quản lý order</a>
+    <a href="/admin/orderHistory">Quản lý order</a>
     <a href="#">Quản lý doanh thu</a>
     <a href="/admin/showEmployees">Quản lý nhân viên</a>
     <a href="/admin/showProducts">Quản lý sản phẩm</a>
