--- a/src/resource/views/admin/showProducts.hbs
+++ b/src/resource/views/admin/showProducts.hbs
@@ -131,7 +131,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>Bạn chắc chắn muốn xóa nhân viên này?</p>
+                <p>Bạn chắc chắn muốn xóa loại nước này?</p>
             </div>
             <div class="modal-footer">
                 <button id="btn-delete-course" type="button" class="btn btn-danger">Xóa
