--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -49,6 +49,14 @@
 .home__nav-title {
   font-weight: 600; }
 
+.modal-dialog {
+  min-width: 50%; }
+
+.modal-header {
+  padding: 36px 60px;
+  background: #E3CEAA;
+  color: black; }
+
 .sidenav {
   height: 100%;
   width: 0;
@@ -56,7 +64,7 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #F9CC76;
+  background-color: #bebebe;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px; }
