--- a/src/resource/views/admin/homepageAdmin.hbs
+++ b/src/resource/views/admin/homepageAdmin.hbs
@@ -4,7 +4,7 @@
   <div id="mySidenav" class="sidenav">
     <a
       href="javascript:void(0)"
-      class="closebtn"s
+      class="closebtn"
       onclick="closeNav()"
     >&times;</a>
     <a href="#">Trang chủ</a>
@@ -101,7 +101,7 @@
       <div id="juice">
         <h1 class="menu__session-title ml-3 mt-3">Nước ép</h1>
         {{#each products}}
-        {{#ifEquals this.type "juice"}}
+        {{#ifEquals this.type' "juice"}}
           <div class="menu__item col-sm-2 col-lg-2">
             <div class="card card-course-item">
               <a href="/products/{{this.slug}}">
