--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   height: 226px;
-  background: #E2C799;
+  background: #e2c799;
   padding-right: 10px; }
 
 .header__logo-left {
@@ -12,7 +12,7 @@
   width: 100px;
   height: 100px;
   mix-blend-mode: darken;
-  border: 2px #C38154 solid;
+  border: 2px #c38154 solid;
   border-radius: 50%;
   padding: 5px; }
 
@@ -37,14 +37,14 @@
 .home__search-bar {
   width: 1000px;
   height: 40px;
-  border: 1px #C38154 solid;
+  border: 1px #c38154 solid;
   border-radius: 7px;
   padding: 0 10px; }
 
 .home__seach-btn {
   width: 100px;
-  border: 1px #C38154 solid;
-  color: #C38154; }
+  border: 1px #c38154 solid;
+  color: #c38154; }
 
 .home__nav-title {
   font-weight: 600; }
@@ -54,7 +54,7 @@
 
 .modal-header {
   padding: 36px 60px;
-  background: #E3CEAA;
+  background: #e3ceaa;
   color: black; }
 
 .sidenav {
@@ -125,4 +125,36 @@ ul.nav-pills {
 
 .product__order-button {
   width: 100%;
-  color: #f1f1f1; }
+  color: red; }
+
+.feedback {
+  height: 100vh; }
+  .feedback-side-bar {
+    background-color: #e3ceaa; }
+  .feedback-wrapper {
+    border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; }
+  .feedback-list {
+    list-style-type: none; }
+  .feedback-item {
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px; }
+  .feedback-date {
+    font-size: 12px;
+    font-weight: 600;
+    color: #7d7c7c; }
+  .feedback-img {
+    width: 120px;
+    height: 120px; }
+
+.btn-add-feedback {
+  width: 165px;
+  background-color: #e3ceaa;
+  color: #675d4c;
+  border-radius: 8px; }
+
+.reply-wrapper {
+  border-radius: 4px;
+  border: 1px solid #c38154;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  background-color: rgba(227, 206, 170, 0.2); }
