--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -164,7 +164,8 @@ ul.nav-pills {
 .feedback {
   height: 100vh;
   &-side-bar {
-    background-color: #e3ceaa;
+    // background-color: #e3ceaa;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   }
   &-wrapper {
     // height: 50%;
@@ -203,4 +204,24 @@ ul.nav-pills {
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
     rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
   background-color: rgba(227, 206, 170, 0.2);
+}
+
+li.nav-item {
+  position: relative;
+}
+
+.nav-feedback-item a {
+  color: #000;
+  font-size: 20px;
+}
+
+.nav-feedback-item ~ .nav-feedback-item::before {
+  content: "";
+  display: block;
+  position: absolute;
+  right: 50%;
+  transform: translateX(50%);
+  width: 80%;
+  height: 1px;
+  background-color: #7d7c7c;
 }
