--- a/src/resource/views/feedback/showFeedback.hbs
+++ b/src/resource/views/feedback/showFeedback.hbs
@@ -1,12 +1,29 @@
 <div class="container-fluid">
   <div class="row feedback">
-    <div class="feedback-side-bar col-3 p-0"></div>
+    <div class="feedback-side-bar col-3 p-0">
+
+      <div class="container-fluid">
+        <div class="row d-flex justify-content-center">
+          <ul class="nav flex-column">
+            <li class="nav-feedback-item">
+              <a class="nav-link active" href="/">Trang chủ</a>
+            </li>
+            <li class="nav-feedback-item">
+              <a class="nav-link active" href="/feedback">Góp ý cửa hàng</a>
+            </li>
+            <li class="nav-feedback-item">
+              <a class="nav-link" href="/account/signin">Đăng nhập</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div class="feedback-section col-9 p-0">
       <div class="feedback-wrapper m-3 p-3">
-        <h2 class="feedback-title">Góp ý cửa hàng</h2>
+        <h2 class="feedback-title ml-1">Góp ý cửa hàng</h2>
         <div class="feedback-wrapper-list d-flex flex-column align-items-end">
           <button
-            class="btn btn-add-feedback font-weight-bold"
+            class="btn btn-add-feedback font-weight-bold mr-3"
             data-toggle="modal"
             data-target="#feedbackModal"
           >
@@ -27,7 +44,38 @@
           </button>
           <div class="col-12 mt-3">
             <ul class="feedback-list">
-              <li class="feedback-item p-2 mb-3">
+              {{#each feedbacks}}
+                {{#unless this.reply}}
+
+                  <li class="feedback-item p-2 mb-3">
+                    <h5 class="feedback-author">{{this.author}}</h5>
+                    <div class="feedback-content d-flex m-3">
+                      <div class="col-6 d-flex flex-column">
+                        <div class="feedback-content">{{this.feedback}}</div>
+                        <div class="feedback-date mt-4">
+                          <div class="feedback-date mt-4">{{#dateToString
+                              this.createdAt
+                            }}{{/dateToString}}</div></div>
+                      </div>
+                      <div class="col-6">
+                        <img class="feedback-img" src="{{this.image}}" alt="" />
+                      </div>
+                    </div>
+                    <div class="reply-wrapper m-3 p-1">
+                      <h5 class="feedback-author">{{this.author}}</h5>
+                      <div class="feedback-content row d-flex flex-wrap m-3">
+                        <div class="d-flex flex-column">
+                          <div class="feedback-content">{{this.feedback}}</div>
+                          <div class="feedback-date mt-4">{{#dateToString
+                              this.createdAt
+                            }}{{/dateToString}}</div>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                {{/unless}}
+              {{/each}}
+              {{! <li class="feedback-item p-2 mb-3">
                 <h5 class="feedback-author">Hồng Phượng</h5>
                 <div class="feedback-content d-flex m-3">
                   <div class="col-6 d-flex flex-column">
@@ -36,6 +84,10 @@
                       lạnh. Order chuyên nghiệp</div>
                     <div class="feedback-date mt-4">05:42
                       PM&nbsp;&nbsp;&nbsp;15/11/2023</div>
+                    <div
+                      class="feedback-date mt-4"
+                    >n.toLocaleString("en-US")</div>
+
                   </div>
                   <div class="col-6">
                     <img
@@ -56,67 +108,7 @@
                     </div>
                   </div>
                 </div>
-              </li>
-              <li class="feedback-item p-2 mb-3">
-                <h5 class="feedback-author">Hồng Phượng</h5>
-                <div class="feedback-content d-flex m-3">
-                  <div class="col-6 d-flex flex-column">
-                    <div class="feedback-content">Quán xinh Nhân viên nhiệt
-                      tình. Đồ uống hơi ngọt so với khẩu vị mình. Quán hơi quá
-                      lạnh. Order chuyên nghiệp</div>
-                    <div class="feedback-date mt-4">05:42
-                      PM&nbsp;&nbsp;&nbsp;15/11/2023</div>
-                  </div>
-                  <div class="col-6">
-                    <img
-                      class="feedback-img"
-                      src="https://picsum.photos/200"
-                      alt=""
-                    />
-                  </div>
-                </div>
-                <div class="reply-wrapper m-3 p-1">
-                  <h5 class="feedback-author">Thúy Hường</h5>
-                  <div class="feedback-content row d-flex flex-wrap m-3">
-                    <div class="d-flex flex-column">
-                      <div class="feedback-content">Cảm ơn bạn đã ghé quán mình,
-                        bọn mình sẽ khắc phục vấn đề máy lạnh</div>
-                      <div class="feedback-date mt-4">05:42
-                        PM&nbsp;&nbsp;&nbsp;15/11/2023</div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li class="feedback-item p-2 mb-3">
-                <h5 class="feedback-author">Hồng Phượng</h5>
-                <div class="feedback-content d-flex m-3">
-                  <div class="col-6 d-flex flex-column">
-                    <div class="feedback-content">Quán xinh Nhân viên nhiệt
-                      tình. Đồ uống hơi ngọt so với khẩu vị mình. Quán hơi quá
-                      lạnh. Order chuyên nghiệp</div>
-                    <div class="feedback-date mt-4">05:42
-                      PM&nbsp;&nbsp;&nbsp;15/11/2023</div>
-                  </div>
-                  <div class="col-6">
-                    <img
-                      class="feedback-img"
-                      src="https://picsum.photos/200"
-                      alt=""
-                    />
-                  </div>
-                </div>
-                <div class="reply-wrapper m-3 p-1">
-                  <h5 class="feedback-author">Thúy Hường</h5>
-                  <div class="feedback-content row d-flex flex-wrap m-3">
-                    <div class="d-flex flex-column">
-                      <div class="feedback-content">Cảm ơn bạn đã ghé quán mình,
-                        bọn mình sẽ khắc phục vấn đề máy lạnh</div>
-                      <div class="feedback-date mt-4">05:42
-                        PM&nbsp;&nbsp;&nbsp;15/11/2023</div>
-                    </div>
-                  </div>
-                </div>
-              </li>
+              </li> }}
             </ul>
           </div>
         </div>
@@ -160,8 +152,8 @@
         </div>
         <div class="modal-body">
           <div class="form-group">
-            <label for="name">Họ tên</label>
-            <input type="text" class="form-control" id="name" name="name" />
+            <label for="author">Họ tên</label>
+            <input type="text" class="form-control" id="author" name="author" />
           </div>
           <div class="form-group">
             <label for="phone">Số điện thoại</label>
