--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -42,7 +42,7 @@
 }
 
 .home__search-bar{
-    width: 1000px;
+    width: 800px;
     height: 40px;
     border: 1px #C38154 solid;
     border-radius: 7px;
@@ -151,5 +151,12 @@
     width: 100%;
     color: #f1f1f1;
  }
+
+ .shopping-cart{
+    border: 0.5px #c8c8c2 solid;
+    border-radius: 5px;
+    padding: 5px 5px 5px 10px;
+ }
+
 
  
